--- a/course-materials/week5.qmd
+++ b/course-materials/week5.qmd
@@ -58,37 +58,16 @@ knitr::include_graphics(here::here("images", "horst-ggplot-masterpiece.png"))
 
 ## {{< fa person-chalkboard title="a person pointing at a chalkboard" >}} Lecture Materials {#lecture-materials}
 
+| {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Lecture slides   | {{< fa file-code title="A code file" >}} Code-along template | {{< fa key title="A key" >}} Code-along key |
+|------------------------------------------------------------------------------------------|--------------------------------------------------------------|---------------------------------------------------|
+| [Lecture 5.1: good data viz](lecture-slides/lecture5.1-good-viz-slides.qmd){target="_blank"}  | NA | NA |
+| [Lecture 5.2: colors](lecture-slides/lecture5.2-colors-slides.qmd){target="_blank"} | [5.2 template](){target="_blank"} | [5.2 key](keys/KEY-lecture5.2-colors.qmd){target="_blank"} |
+| [Lecture 5.3: choropleth](lecture-slides/lecture5.3-choropleth-slides.qmd){target="_blank"} | [5.3 template](){target="_blank"} | [5.3 key](keys/KEY-lecture5.3-choropleth.qmd){target="_blank"} |
+: {.hover .bordered tbl-colwidths="[50,25,25]"} 
+
+## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-discussion Prep {#pre-discussion-prep} 
+
 *Coming soon!*
-
-<!-- Week 5 instruction is broken down into three lessons: -->
-
-<!-- ::: {.grid} -->
-
-<!-- ::: {.g-col-12 .g-col-md-4} -->
-<!-- ::: {.center-text} -->
-<!-- [**What makes a good viz?**]{.teal-text .body-text-m} -->
-
-<!-- [{{< fa person-chalkboard title="A person motioning at a chalkboard" >}} lecture 5.1 slides](lecture-slides/week5.1-good-viz-slides.qmd){.btn role="button" target="_blank"}  -->
-<!-- ::: -->
-<!-- ::: -->
-
-<!-- ::: {.g-col-12 .g-col-md-4} -->
-<!-- ::: {.center-text} -->
-<!-- [**Colors**]{.teal-text .body-text-m} -->
-
-<!-- [{{< fa person-chalkboard title="A person motioning at a chalkboard" >}} lecture 5.2 slides](lecture-slides/week5.2-colors-slides.qmd){.btn role="button" target="_blank"}  -->
-<!-- ::: -->
-<!-- ::: -->
-
-<!-- ::: {.g-col-12 .g-col-md-4} -->
-<!-- ::: {.center-text} -->
-<!-- [**Colors & Choropleths**]{.teal-text .body-text-m} -->
-
-<!-- [{{< fa person-chalkboard title="A person motioning at a chalkboard" >}} lecture 5.3 slides](lecture-slides/week5.3-choropleth.qmd){.btn role="button" target="_blank"}  -->
-<!-- ::: -->
-<!-- ::: -->
-
-<!-- ::: -->
 
 ## {{< fa comments title="two speech bubbles" >}} Discussion Materials {#discussion-materials}
 
